2008-12-29 20:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/TODO: Update progress.
	* Modules/Debuggers/ProjectCenter/GNUmakefile: Add images
	to makefile.
	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Add up and down
	methods to implement this behaviour.
	* Modules/Debuggers/ProjectCenter/Resources/down_button.png
	* Modules/Debuggers/ProjectCenter/Resources/up_button.png:
	Images for the up/down buttons.

2008-12-29 00:30-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCProjectLauncher.m: Remove local variable for debugger 
	from method.  Also add it to the launcher dealloc method.
	* Headers/ProjectCenter/PCProjectLauncher.h: Add an ivar for the 
	debugger.
	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Add dealloc to shut 
	down
	the debugger window when it's dealloc.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Don't set status 
	when terminated, since it causes a crash.

2008-12-28 11:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Added code
	to do the restart and pause actions in the debugger.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.[hm]: Added
	method subProcessId and an ivar and the logic to parse the
	process id from debugger output.

2008-12-28 02:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCEditorManager.m: Remove log.
	* Modules/Debuggers/ProjectCenter/GNUmakefile: Added new images
	to resource list.
	* Modules/Debuggers/ProjectCenter/PCDebugger.[hm]: Added setStatus:
	method to manage status field.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Added code
	to handle the toolbar.
	* Modules/Debuggers/ProjectCenter/PTYView.[hm]: Added method called
	"terminate" so that subclasses can override how the process is
	terminated.
	* Modules/Debuggers/ProjectCenter/Resources/PCDebugger.gorm: Added
	status line.
	* Modules/Debuggers/ProjectCenter/Resources/go_button.png